--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="wrap">
-    <section class="slideshow-container">
+    <section class="slideshow-container" > 
       <div class="myslide fade">
         <div class="numbertext"></div>
         <img src="img/img01.jpg" alt="cruella de vil">
@@ -48,6 +48,6 @@
     </div>
   </div>
 
-  <script src="index.js"></script>
+  <script defer src="index.js"></script>
 </body>
 </html>
